# Procurement-AI

./: README.md  package.json  pyproject.toml
procurement/: package-lock.json  package.json  vite.config.js
procurement/src/: App.jsx  dashboard.jsx  index.css  main.jsx
procurement/src/Components/: country_select.jsx  date_picker.jsx  number_card.jsx  vendor_table.jsx
procurement/src/Components/Navbar/: navbar.jsx  profile.jsx  searchbar.jsx
procurement/src/Components/Navigation_Panel/: sidebar.jsx
procurement/src/auth/: forgot-password.jsx  login.jsx  register.jsx
procurement/src/contexts/: CountryContext.jsx  NavContext.jsx  NumberCardContext.jsx  SidebarContext.jsx  VendorContext.jsx
procurement_ai/: hooks.py  modules.txt
procurement_ai/utils/: quotation_mail.py  register_user.py
